--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- 頭像 -->
     <img
       class="w-24 h-24 rounded-full mx-auto mb-4 border-4 border-indigo-500"
-      src="C:\Users\ASUS\OneDrive\Desktop\my project\images\我.jpg"
+      src="./我.jpg"
       alt="頭像"
     />
 
